# green

./: ARCHITECTURE.md
green-decision-module/: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN_V1.md  README.md  REPORT.md  REPORTE_FINAL.md  pyproject.toml
green-decision-module/configs/: carbon_model.yaml  facility_model.yaml  simulation.yaml  window_scoring.yaml
green-decision-module/docs/: JOB_OBSERVABILITY.md
green-decision-module/report/: report.tex
green-decision-module/src/green_observatory/: __init__.py  cli.py  config.py  models.py
green-decision-module/src/green_observatory/carbon/: __init__.py  adaptive_ensemble.py  annual_evaluation.py  causal_operational_gate.py  climatology.py  consolidated_physical.py  lstm.py  (+46 more)
green-decision-module/tests/: test_carbon_energy_charts.py  test_causal_operational_gate.py  test_climatology.py  test_consolidated_physical.py  test_consolidated_physical_calibration.py  test_consolidated_share.py  test_corrected.py  test_electricity_maps.py  test_ensemble_ci.py  test_exhaustive_windows.py  test_extra_trees_carbon.py  test_features.py  test_france24_model.py  test_green_window_ranker.py  test_job_observability.py  test_lstm.py  test_mix_forecast_energy_charts.py  test_model_eval.py  test_models.py  test_physical_model.py  test_provider_odre.py  test_ranking_model.py  test_realtime_proxy.py  test_realtime_proxy_live_refit.py  test_regime_moe.py  test_rte_availability.py  test_rte_forecast_features.py  test_rte_system_forecast.py  test_sarimax.py  test_source_share_proxy.py  test_thermal_margin.py  test_weather.py  test_windows.py
(+249 files in other folders)
